- Implemented Scheduler command for reset groups - Implemented CMS Component for creating, canceling and managing membership groups. - Removed autocomplete feature when inviting users to join a group - Minor bug fixing for GroupRequest component - Added groups messages and exceptions to Lang.eng file. - Added 2 new settings to groups for controlling number of groups a user can created, number a groups a user can join.

--- a/components/groupmanager/default.htm
+++ b/components/groupmanager/default.htm
@@ -1,25 +1,3 @@
-{{ form_ajax('onSubmit', { update: { '@flashMessages': '#flashMessages', 'GroupManager::list': '#result' } } ) }} 
-
-  <div class="panel-body">
-      <div class="input-group">
-          <input type="text" class="form-control" placeholder="Group name" name="name" >
-          <span class="input-group-btn">
-              <button type="submit" class="btn btn-default" >Create</button>
-          </span>
-      </div>
-  </div>
-
-{{ form_close() }}
-
-<table class="table table-hover">
-	<thead>
-		<tr>
-			<th>Name</th>
-			<th>Code</th>
-			<th></th>
-		</tr>
-	</thead>
-	<tbody id="result">
-		{% partial __SELF__~"::list" %}
-	</tbody>
-</table>
+<div id="step"> 
+	{% partial '@groups-manager' %} 
+</div>
