Changed icon for liked artworks

--- a/components/activitystream/default.htm
+++ b/components/activitystream/default.htm
@@ -56,11 +56,11 @@
             </li>
             <li>
                 <a 
-                    class="filter-stream-artwork button large icon-check" 
+                    class="filter-stream-artwork button large icon-heart" 
                     href="#" 
                     data-request="onUpdate" 
                     data-request-data="filter: 'artwork'"
-                >Artworks</a>
+                >Liked Artworks</a>
             </li>
         </ul>
     </div>
