changed the name of the liked art link

--- a/components/activitystream/default.htm
+++ b/components/activitystream/default.htm
@@ -60,7 +60,7 @@
                     href="#" 
                     data-request="onUpdate" 
                     data-request-data="filter: 'artwork'"
-                >Liked Artworks</a>
+                >Liked Art</a>
             </li>
         </ul>
     </div>
