Correct typo in Notification list component

--- a/components/notificationlist/default.htm
+++ b/components/notificationlist/default.htm
@@ -53,7 +53,7 @@
 {% endfor %}
 {% else %}
 	<div>
-		<p>There is not new notifications !!</p>
+		<p class="text-center lead">There are no new notifications</p>
 	</div>
 
 {% endif %}
