add default option for states

--- a/components/userprofile/default.htm
+++ b/components/userprofile/default.htm
@@ -55,7 +55,7 @@
                     id="state"
                     name="state"
                     class="form-control custom-select">
-
+                        <option> - Select a State - </option>
                     {% for state in options.states %}
                         <option
                         {% if state.id == user.state.id %}
