--- a/components/notificationlist/default.htm
+++ b/components/notificationlist/default.htm
@@ -1,3 +1,4 @@
+<div id="notifications-list">
 {% if notifications %}
 {% for notification in notifications %}
 	
@@ -18,9 +19,11 @@
 		{% if not tools and unReadCount > 0 %}
 			{% set tools = true %}
 			<div class="col-md-12">
-			<a data-request="onMarkAllRead" 
-			   data-request-success="$('div.notification-unread').removeClass('notification-unread');"
+			<a data-remove="{{ onlyUnread }}" 
+			   class="markReadAll pull-right"
+			   data-request-success=""
 			   href="#" class="pull-right">mark all as read</a>	
+			   
 			</div>
 		{% endif %}
 
@@ -30,14 +33,13 @@
 	
 	
 	<div class="notification {{ ( not notification.is_read )? 'notification-unread' : '' }}">
-		{% if not notification.is_read %}
-		<button data-request="onMarkRead" 
-				data-request-data="id: {{ notification.id }}"
-				data-request-success="$($el).parent('div').removeClass('notification-unread');"
+
+		<button data-id="{{ notification.id }}"
+				data-remove="{{ onlyUnread }}"
+				class="markRead close"
 				type="button" class="close" >
 				<span aria-hidden="true">&times;</span><span class="sr-only">Close</span>
 		</button>
-		{% endif %}
 		
 		{% if notification.subject %}
 			<h4>{{ notification.subject }}</h4>
@@ -55,5 +57,5 @@
 	<div>
 		<p class="text-center lead">There are no new notifications</p>
 	</div>
-
 {% endif %}
+</div>
