allow user to redeem points when user points are equal to reward points

--- a/views/reward.htm
+++ b/views/reward.htm
@@ -10,7 +10,7 @@
 
         {{ model.fine_print|raw }}
 
-        {% if user.points > model.points %}
+        {% if user.points >= model.points %}
         <button class="btn btn-primary redeem" 
             data-request="onRedeem"
             data-dismiss="popup"
