--- a/views/rewardPreview.htm
+++ b/views/rewardPreview.htm
@@ -33,7 +33,7 @@
             
         </div>
         <div class="claim col-md-4">
-            {% if user.points > reward.points %}
+            {% if user.points >= reward.points %}
             <p>Claim for</p>
             <button class="btn btn-primary" 
                 data-control="popup" 
