include reward id

--- a/views/rewardPreview.htm
+++ b/views/rewardPreview.htm
@@ -6,7 +6,7 @@
             <a href="#" 
                 data-control="popup" 
                 data-handler="onRedeemModal" 
-                data-request-data="id: {{ model.id }}"
+                data-request-data="id: {{ reward.id }}"
             >
                 <img src="{{ reward.image.getThumb(130, 180) }}"/>
             </a>
