Added points awarded to TXT activity code response.

--- a/views/kiosk/activity_code_successful.htm
+++ b/views/kiosk/activity_code_successful.htm
@@ -3,8 +3,10 @@
 {% else %}
 <h4>Activity code</h4>
 {% endif %}
+
 <p>
-{{ message|raw }}
+{{ message|raw }}<br/>
+{% if activity.points %} You've been awarded {{ activity.points }} points.{% endif %}
 </p>
 
 {% if activity.objectData %}
