left align number fields on backend

--- a/partials/_content_toolbar.htm
+++ b/partials/_content_toolbar.htm
@@ -2,6 +2,13 @@
     $isCreate = $this->formGetContext() == 'create';
     $pageUrl = isset($pageUrl) ? $pageUrl : null;
 ?>
+
+<style type="text/css">
+.form-group.number-field > .form-control {
+    text-align: left;
+}
+</style>
+
 <div class="form-buttons loading-indicator-container">
 
     <!-- Save -->
