--- a/components/leaderboard/default.htm
+++ b/components/leaderboard/default.htm
@@ -2,6 +2,7 @@
     <ol class="list-group">
     {% for user in users %}
         <li class="list-group-item">
+            <img src="{{ user.avatar.getThumb(50, 50) }}"/>
             {{ user.metadata.first_name }} {{ user.metadata.last_name|first|upper }}.
 
             <span class="badge">
