Changed template structure of ActivityCatalog partials to fix small AJAX problem and provide better modularity Changed ActivityFilters form data to JSON for better extensibility Removed ability to specify target element and partial properties for ActivityFilters (needless and buggy) Changed CSS classes in ActivityFilters output for greater clarity of purpose and to more easily isolate activity filter output from other lists of activities Minor code cleanup of new components for general readability
Squashed commit of the following:

commit 5ac93777b986e9575e910fb85eafc5a46f7843f3
Merge: 6384a84 18cab67
Author: drupal@kurdi <mpopke@denverartmuseum.org>
Date:   Wed Apr 1 13:07:08 2015 -0600

    Merge branch 'master' of github.com:DallasMuseumArt/OctoberFriends into activity_catalog

commit 6384a84d499b068ceab5a9734f65c0baae371643
Author: drupal@kurdi <mpopke@denverartmuseum.org>
Date:   Wed Apr 1 13:03:55 2015 -0600

    Changing template structure to fix AJAX problem and provide better modularity

--- a/components/activityfilters/default.htm
+++ b/components/activityfilters/default.htm
@@ -1,20 +1,20 @@
-<div id="activity-filters" class="activity-filters">
+<div class="friends-activity-filters">
     <ul
-        class="activity-filters-list"
+        class="friends-activity-filters-list"
         data-filter-element="{{ element }}"
         data-filter-partial="{{ partial }}"
         data-filter-component="{{ component }}"
     >
-        <li class="activity-filters-item">
-            <a href="#" class="activity-filter-all"
+        <li class="friends-activity-filters-item">
+            <a href="#" class="friends-activity-filter-all"
                 data-request="onUpdate"
                 data-request-data="filter: 'all'"
             >View All</a>
         </li>
         {% for category in categories %}
-            <li class="activity-filters-item">
+            <li class="friends-activity-filters-item">
                 <a href="#"
-                    class="activity-filter active"
+                    class="friends-activity-filter active"
                     data-filter-name="{{ category.name }}"
                 >{{ category.name }}</a>
             </li>
