--- a/components/activitycatalog/default.htm
+++ b/components/activitycatalog/default.htm
@@ -1,10 +1,3 @@
-<div id="activity-catalog" class="activity-catalog filtered-activity-list">
-    <ul class="activities">
-        {% for activity in activities %}
-        <li class="activity">
-            {{ activity.title }} — {% for category in activity.categories %} {{ category.name }} {% endfor %}
-        </li>
-        {% endfor %}
-    </ul>
-    <div class="links">{{ links|raw }}</div>
+<div id="activity-catalog" class="filtered-activity-list{% if containerclass %} {{ containerclass }}{% endif %}">
+    {% partial '@activitylist' activities=activities links=links %}
 </div>
