create thumbnails of images

--- a/views/reward.htm
+++ b/views/reward.htm
@@ -1,6 +1,6 @@
 <div class="reward-full row">
     <div class="image col-md-4 col-sm-4">
-         <img src="{{ model.image.getPath() }}"/>
+         <img src="{{ model.image.getThumb(300, 300) }}"/>
     </div>
     
     <div class="body col-md-8 col-sm-8">
