changed wording on chart headers

--- a/reportwidgets/friendsmembers/partials/_widget.htm
+++ b/reportwidgets/friendsmembers/partials/_widget.htm
@@ -1,5 +1,5 @@
 <div class="report-widget">
-    <h3>% of Friends w/Partnership</h3>
+    <h3>Total % of Friends w/Partnership</h3>
 
     <div 
         class="control-chart"
