Refactor graph framework to be called outside of document.load

--- a/reportwidgets/datepicker/partials/_widget.htm
+++ b/reportwidgets/datepicker/partials/_widget.htm
@@ -2,11 +2,14 @@
     <h3>Choose a date range</h3>
 
     <ul>
-        <li><a href="#" class="today" data-type="today">Today</a></li>
         <li><a href="#" class="week" data-type="week">Week</a></li>
         <li><a href="#" class="month" data-type="month">Month</a></li>
         <li><a href="#" class="year" data-type="year">Year</a></li>
         <li><a href="#" class="all-time" data-type="alltime">All Time</a></li>
+
+        <form id="date-picker" action="#">
+
+        </form>
     </ul>
 
     <div class="clearfix"></div>
