--- a/reportwidgets/graphreport/partials/_widget.htm
+++ b/reportwidgets/graphreport/partials/_widget.htm
@@ -6,7 +6,7 @@
     <div class="clearfix"></div>
 
     <script type="text/javascript">
-        friendsReports.<?= $id ?>.ajaxPath = "<?= $ajaxPath ?>";
+        friendsReports.graphs.<?= $id ?>.ajaxPath = "<?= $ajaxPath ?>";
     </script>
 
 </div>
