Functional ajax front end to date picker

--- a/reportwidgets/datepicker/assets/css/datepicker.css
+++ b/reportwidgets/datepicker/assets/css/datepicker.css
@@ -12,3 +12,15 @@
 .report-widget.date-picker ul li {
     padding: 0 10px;
 }
+
+#date-picker {
+    display: inline;
+}
+#date-picker input {
+    width: 90px;
+    height: 37px;
+}
+
+.date-range.active {
+    color: #7e8c8d;
+}
