--- a/reportwidgets/graphreport/partials/_widget.htm
+++ b/reportwidgets/graphreport/partials/_widget.htm
@@ -1,7 +1,9 @@
 <div class="report-widget <?= $id ?>">
     <h3><?= $title ?></h3>
     
-    <div id="<?= $id ?>"></div>
+    <div id="<?= $id ?>" class="graphreport">
+        <img class="graphreport-loading" src="/plugins/dma/friends/reportwidgets/graphreport/assets/images/loading.gif"/>
+    </div>
 
     <div class="clearfix"></div>
 
