--- a/reportwidgets/datepicker/partials/_widget.htm
+++ b/reportwidgets/datepicker/partials/_widget.htm
@@ -17,8 +17,9 @@
                 data-from="<?= $year ?>"
                 data-to="<?= $current ?>"
             >Year</a></li>
-        <li>Custom:
+        <li>
             <div id="date-picker">
+                Custom:<br/>
                 <label for="datepicker-from">From:</label>
                 <input type="text" id="datepicker-from"></input>
 
