Improved ActivityFilter javascript interaction model and code cleanup

--- a/components/activityfilters/default.htm
+++ b/components/activityfilters/default.htm
@@ -4,10 +4,7 @@
         data-filter-component="{{ component }}"
     >
         <li class="friends-activity-filters-item">
-            <a href="#" class="friends-activity-filter-all"
-                data-request="onUpdate"
-                data-request-data="filter: 'all'"
-            >View All</a>
+            <a href="#" class="friends-activity-filter-all">Check/Uncheck All</a>
         </li>
         {% for category in categories %}
             <li class="friends-activity-filters-item">
