--- a/views/kiosk/activity_code_successful.htm
+++ b/views/kiosk/activity_code_successful.htm
@@ -1,5 +1,5 @@
 {% if viaSMS %}
-<h4>Activity code send by SMS</h4>
+<h4>Activity code sent by SMS</h4>
 {% else %}
 <h4>Activity code</h4>
 {% endif %}
