added membership info to profile

--- a/components/userprofile/default.htm
+++ b/components/userprofile/default.htm
@@ -109,6 +109,16 @@
 
     <div class="col-md-6 col-sm-6">
 
+        {% if user.metadata.current_member %}
+        <h3>Membership Information</h3>
+
+        <div class="form-group">
+            <label>Membership Number</label>
+            <div>{{ user.metadata.current_member_number }}</div>
+        </div>
+
+        {% endif %}
+
         <h3>Demographic Information</h3>
 
         <div class="form-group">
