updated verbage on profile form

--- a/components/userprofile/default.htm
+++ b/components/userprofile/default.htm
@@ -50,7 +50,7 @@
                 {% if user.metadata.email_optin %}
                     checked="checked"
                 {% endif %}
-                /> Email Opt-in
+                /> Recieve Email Updates
             </label>
         </div>
 
