changed verbage of email optin

--- a/components/userprofile/default.htm
+++ b/components/userprofile/default.htm
@@ -50,7 +50,7 @@
                 {% if user.metadata.email_optin %}
                     checked="checked"
                 {% endif %}
-                /> Recieve Email Updates
+                /> RECEIVE EMAIL UPDATES
             </label>
         </div>
 
